<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40FFFFFF">

        <TextView
            android:id="@+id/button3"
            android:layout_width="115dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#8500E3F8"
            android:gravity="center"
            android:onClick="addUserView"
            android:text="@string/password_reset"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="180dp"
            android:layout_height="47dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/loginPage"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="97dp"
            android:layout_height="53dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="28dp"
            android:background="@color/back_button"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/pass"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/InUserPassID"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="31dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InUserNameID" />

        <EditText
            android:id="@+id/InUserNameID"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="31dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="140dp"
            android:layout_height="41dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="54dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="115dp"
            android:layout_height="43dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="22dp"
            android:backgroundTint="#8500E3F8"
            android:gravity="center"
            android:onClick="addUserView"
            android:text="@string/addUser"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InUserPassID" />

        <ProgressBar
            android:id="@+id/loadBarID"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>