<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#23C1DDFF">

        <TextView
            android:id="@+id/textView"
            android:layout_width="188dp"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/userPage"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="87dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/address"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="87dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="41dp"
            android:gravity="center"
            android:text="@string/pass"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="87dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="41dp"
            android:gravity="center"
            android:text="@string/tel"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="29dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEmailID" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="29dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="87dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/userName"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/addEmailID"
            android:layout_width="233dp"
            android:layout_height="47dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="29dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="134dp"
            android:layout_height="46dp"
            android:layout_marginTop="41dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="234dp"
            android:layout_height="43dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="29dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="338dp"
            android:layout_height="59dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:layout_width="102dp"
            android:layout_height="63dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="49dp"
            android:backgroundTint="#14FFFFFF"
            android:onClick="addUser"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>